--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -9,15 +9,15 @@ body {
 	-webkit-font-smoothing: antialiased;
 }
 
-a{
+.linkbox a{
 	color:#339933;
 }
 
-a:hover{
+.linkbox a:hover{
 	color:blue;
 }
 
-a:active{
+.linkbox a:active{
 	color:black;
 }
 
@@ -42,6 +42,15 @@ a:active{
 }
 
 .profiles{
+	font-size:14px;
 	color: #0066FF;
+}
+
+.profiles a{
+	color:#336699;
+}
+
+.profiles a:hover{
+	color:#E62E00;
 }
 
